--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -109,7 +109,7 @@ button {
     font-size: 24px;
     line-height: 100%;
     letter-spacing: 0px;
-    
+
 }
 
 .left_service,
@@ -117,13 +117,15 @@ button {
     display: flex;
     flex-direction: column;
     gap: 25px;
-   
+
 }
+
 .service_content {
     width: 100%;
 }
+
 .left_service img,
-.right_service img{
+.right_service img {
     width: 200px;
     height: 200px;
     border-radius: 80px;
@@ -135,7 +137,7 @@ button {
     font-size: 24px;
     line-height: 100%;
     letter-spacing: 0px;
-    
+
 }
 
 
@@ -145,16 +147,17 @@ button {
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 0px;
-    
+
 }
+
 #second_service {
     padding-left: 0px;
 }
 
-.right_service{
+.right_service {
     display: flex;
     flex-direction: column-reverse;
-   
+
 }
 
 #second_service button {
@@ -195,6 +198,7 @@ button {
     gap: 60px;
     align-items: center;
 }
+
 .feature_banner>img:nth-child(1) {
     width: 100%;
     object-fit: contain;
@@ -205,6 +209,7 @@ button {
     gap: 20px;
     align-items: center;
 }
+
 .feature_content img {
     width: 24px;
     height: 24px;
@@ -259,7 +264,7 @@ button {
 
 .footer-banner-image div img:nth-of-type(2) {
     width: 72px;
-    height: 41px;    
+    height: 41px;
 }
 
 .footer_banner .content button {
@@ -336,4 +341,34 @@ footer {
 .copy div {
     display: flex;
     gap: 100px;
+}
+
+.about_block_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 40px;
+   
+}
+.about_content{
+    width: 100%;
+}
+#about_banner {
+    width: 100%;
+    height: 200%;
+}
+
+.about_block_container div {
+    height: 200px;
+    width: 85%;
+    background-color: #F29727;
+    padding: 20px;
+    border-radius: 20px;
+    color: white;
+    margin: auto;
+}
+.contact {
+    display: flex;
+    flex-direction: column;
 }
