--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,20 @@
     gap: 30px;
 }
 
-.link h1 {
+
+.link a {
     font-family: Rubik;
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 0px;
     text-transform: capitalize;
-
+    cursor: pointer;
+    color: #333;
+    text-decoration: none;
+}
+.link a:hover {
+    color: #FFD700;
 }
 
 button {
@@ -39,6 +45,10 @@ button {
     background-color: #F29727;
     border-width: 0px;
     color: white;
+}
+button:hover {
+    opacity: 50%;
+    cursor: pointer;
 }
 
 .banner {
@@ -138,6 +148,10 @@ button {
 
 .third_service button {
     background-color: #2E2E2E;
+}
+#about_banner {
+    width: 100%;
+    height: 100%;
 }
 
 .feature {
@@ -299,3 +313,117 @@ footer {
     display: flex;
     gap: 100px;
 }
+
+.about_content{
+    width: 200%;
+}
+
+.about_block_container {
+ width: 80%;
+ margin: auto;
+ display: flex;
+ justify-content: space-between;
+ margin-bottom: 40px;
+}
+.about_block_container div {
+    height: 300px;
+    width: 25%;
+    background-color: #F29727;
+    padding: 20px;
+    border-radius: 20px;
+    color: white;
+}
+
+.contact {
+    display: flex;
+    flex: 0.2 0 20%;
+    padding: 10px 0px 10px 20px;
+    height: 80hv;
+    overflow: hidden;
+}
+.contact_content{
+    width: 100%;
+}
+.contact_banner{
+    width: 90%;
+    height: 90%;
+}
+.support-container {
+    display: flex;
+    flex-direction:column;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 10px;
+    row-gap: 20px;
+  }
+  
+  .support-card {
+    flex: 0.2 0 20%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    padding: 10px;
+    user-select: none;
+    color: #333;
+    overflow: hidden;
+  }
+  
+  .support-card.secondary {
+    row-gap: 30px;
+    justify-content: space-around;
+  }
+  
+  .support-icon {
+    z-index: 2;
+    background-color: #F29727;
+    border-radius: 40px;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .support-title {
+    z-index: 2;
+    color: inherit;
+    width: 75%;
+    margin: 0;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+    letter-spacing: -0.03em;
+  }
+  
+  .support-description {
+    z-index: 2;
+    color: inherit;
+    width: 95%;
+    min-height: 60px;
+    margin: 0;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: -0.03em;
+  }
+  
+  .support-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #F29727;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+  }
+  
+  .support-button.whatsapp {
+    width: 100px;
+  }
+  
+  .ticket {
+    width: 200px;
+  }
+  
