--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -13,17 +13,17 @@
     gap: 30px;
 }
 
-.link h1 {
+a {
     font-family: Rubik;
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 0px;
     text-transform: capitalize;
-
+    color: #F29727;
 }
 
-.header button {
+.header button.signup {
     display: none;
 }
 
@@ -46,6 +46,35 @@ button {
     color: white;
 }
 
+.cancel_div {
+    
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+
+}
+
+.cancel {
+    width: 24px;
+    height: 24px;
+   
+}
+
+.mobile_menu {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 0;
+    background-color: white;
+    gap: 20px;
+    padding: 20px;
+    top: 0;
+    width: 50%;   
+}
+#menu{
+    display: inline-block;
+}
 .banner {
     display: flex;
     flex-direction: column-reverse;
@@ -349,11 +378,13 @@ footer {
     flex-direction: column;
     gap: 20px;
     margin-bottom: 40px;
-   
+
 }
-.about_content{
+
+.about_content {
     width: 100%;
 }
+
 #about_banner {
     width: 100%;
     height: 200%;
@@ -368,6 +399,7 @@ footer {
     color: white;
     margin: auto;
 }
+
 .contact {
     display: flex;
     flex-direction: column;
