--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,9 @@ button:hover {
     letter-spacing: 0px;
 }
 
-
+.phone {
+    display:none;
+}
 .service_content p {
     font-family: Rubik;
     font-weight: 500;
